Fixed overflow problem

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,12 @@ body {
     color: lightgrey;
     background-color: #282B2E;
     font-size: 18px;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+    display: none;
 }
 
 header {
